<resources>
    <string name="app_name">ATLAS 寰图</string>
    <string name="hello_blank_fragment">Hello blank fragment!</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="pay_result_callback_msg" formatted="false">微信支s付结果：%s</string>
    <string name="enter_change">确认更改</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="click_get">点击获取</string>
    <string name="retry_send">重新发送</string>
    <string name="click_retry_get">点击重新获取</string>
    <string name="please_input_authc_code">请输入验证码</string>
    <string name="please_input_pay_num"><font size="20">请输入您要充值的金额</font></string>
    <string name="wx_pay">微信充值</string>
    <string name="ali_pay">支付宝充值</string>
    <string name="please_select_pay_channel">请选择支付方式</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="company">公司</string>
    <string name="please_input_you_opinion">请输入您的宝贵意见</string>
    <string name="activity_limt_person_and_cost"><Data><![CDATA[<font color="#bdbdbd">活动人数限制 </font><font color="#ff0000">%1$s</font><font color="#bdbdbd">~%2$s人，每人费用 </font><font color="#ff0000">￥%3$s</font>]]></Data></string>
    <string name="reserve_room">预定会议室</string>
    <string name="reserve_server">预约服务</string>
    <string name="add_vip">加入会籍</string>
    <string name="meeting_look">预约参观</string>
    <string name="activity_recommend">活动推荐</string>
    <string name="private_introducer">私教介绍</string>
    <string name="reserve_course">预约课程</string>
    <string name="reserve_experience">预约体验</string>
    <string name="more">更多</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="is_quit_the_chat_room">是否退出聊天室</string>
    <string name="messages_are_empty">聊天记录已被清空</string>
    <string name="is_modify_the_group_description">正在修改群详情..</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="Modify_the_group_description_successful">修改群详情成功</string>
    <string name="change_the_group_description_failed_please">修改群详情失败，请检查网络或稍后重试</string>
    <string name="change_the_group_description">改变群描述</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="have_connected_with">已经和对方建立连接</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="refuse">拒绝</string>
    <string name="invite_join_group">邀请加入群：</string>
    <string name="accept_join_group">同意加入群：</string>
    <string name="refuse_join_group">拒绝加入群：</string>
    <string name="Are_agree_with">正在同意……</string>
    <string name="Are_refuse_with">正在拒绝……</string>
    <string name="Refuse_with_failure">拒绝失败:</string>
    <string name="coffee">咖啡</string>
    <string name="to_account">立即付款</string>
    <string name="this_monent_recommend">本月推荐</string>
    <string name="my_room">我的会议</string>
    <string name="vip_product">会籍产品</string>
    <string name="product_detail">产品详情</string>
    <string name="product_introduce">产品介绍</string>
    <string name="order_detail">订单详情</string>
    <string name="enter_order">确认订单</string>
    <string name="quick_pay">马上支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="need_pay_money">需支付: <font color="#ff8149">%1$s元</font></string>
    <string name="real_pay_money">实际支付： <Data><![CDATA[<font size="5" ,color="#ff8149">%1$s元</font>]]></Data></string>
    <string name="coupon">优惠券</string>
    <string name="none_user_coupon">无可用优惠券</string>
    <string name="have_user_coupon">有可用优惠券</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="shopping_cart_null">购物车空空如也~</string>
    <string name="select_shopping">请选择商品</string>
    <string name="header_icon">头像</string>
    <string name="no_user">不使用</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="free_money">共折扣%1$s元，您还需支付</string>
    <string name="free_money_">共优惠%1$s元</string>
    <string name="limt_select_time_district">只能选择15天范围内的时间</string>
    <string name="today_null_course">今天暂无课程</string>
    <string name="limt_order_hour">最少只能预约一小时</string>
    <string name="need_beyond_current_time">预约时间必须大于当前时间</string>
    <string name="title_activity_amap">AMapActivity</string>
    <string name="cancel_auth">取消授权</string>
    <string name="set_auth">设为授权人</string>
    <string name="owner">法人</string>
    <string name="authorized">授权人</string>
    <string name="corporation_preson">企业员工名单</string>
    <string name="please_set_pws">请设置密码</string>
    <string name="balance">余额：%1$s元</string>
    <string name="recharge_record">充值记录</string>
    <string name="lesson_introduce">课程介绍</string>
    <string name="offlineCode">（台号：%1$s）</string>
    <string name="to_be_bill">未出账单</string>
    <string name="recharge_detail">余额明细</string>
    <string name="guide_down">下拉进入业态详情</string>
    <string name="guide_left_right">左右滑动更换业态</string>
    <string name="know">我知道了</string>
    <string name="not_more">已经全部加载完毕</string>
    <string name="net_work_error">网络断开</string>
    <string name="click_retry">请点击刷新</string>
    <string name="free_user_min_and_remain_min">使用免费点数%1$s分钟，剩余%2$s分钟</string>
    <string name="free_user_min">使用免费点数%1$s分钟</string>
    <string name="free_user_min_">%1$s元打印抵扣金</string>
    <string name="free_user_less_min_second">免费点数剩余%1$s分钟,小于最小计费单位,抵扣不可用</string>
    <string name="pay_recharge_detail">充值详情</string>
    <string name="complete_order">完成订单</string>
    <string name="image_not_exist_retry_select">图片不存在，请重新选择</string>
    <string name="please_open_permisstion_camera">请打开读写存储及相机权限</string>
    <string name="please_open_permisstion_location">请打开定位权限</string>
    <string name="you_is_not_vip">您不是会籍会员</string>
    <string name="coup_and_benefit_not_used">优惠券与促销不能同时使用</string>
    <string name="company_bill">企业账单</string>
    <string name="my_appointment">我的预约</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="umeng_meeting_room_list">预约会议室列表</string>
    <string name="umeng_meeting_room_detail">预约会议详情</string>
    <string name="umeng_meeting_room_form">预约会议室表单</string>
    <string name="umeng_lesson_list">预约课程列表</string>
    <string name="umeng_lesson_detail">预约会议详情</string>
    <string name="umeng_complete_order">完成订单</string>
    <string name="umeng_fitness_order">健身课程订单</string>
    <string name="umeng_metting_order">会议室订单</string>
    <string name="time">耗时:</string>
    <string name="not_support">条件不满足，结束</string>
    <string name="start">开始验证，请放置你的指纹</string>
    <string name="succeed">验证通过，结束</string>
    <string name="not_match">指纹不匹配，剩余 %1d 次机会</string>
    <string name="failed">验证失败，结束，是设备锁定</string>
    <string name="start_failed">设备暂时被锁定</string>
    <string name="click_to_start">请点击开始验证按钮开始</string>
    <string name="btn_start">开始验证</string>
    <string name="btn_copy">复制信息</string>
    <string name="copied">已复制</string>
    <string name="stopped_by_life_callback">指纹验证已停止，请重新打开APP再试</string>
    <string name="please_input_hone_num">请输入您的手机号码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="register_login">注册／登录</string>
    <string name="read_register">注册即表示您已经阅读，并同意 <Data><![CDATA[<font color="#ffd900">《用户服务协议》</font>]]></Data></string>
    <string name="upload_you_header">上传您的头像</string>
    <string name="please_input_company_name">请输入您的公司名称</string>
    <string name="please_input_your_birthday">您的生日</string>
    <string name="please_input_company_name_correct">请输入正确的公司名称</string>
    <string name="please_input_you_name">请输入您的呢称</string>
    <string name="please_input_you_name_correct">请输入正确的昵称</string>
    <string name="please_input_referrer_mobile">请输入推荐人手机号</string>
    <string name="complete">完成</string>
    <string name="next">下一步(1/2)</string>
    <string name="code_info">支付／健身打卡</string>
    <string name="my_code">我的二维码</string>
    <string name="user_center_score">我的积分</string>
    <string name="user_center_score_gz">积分规则</string>
    <string name="user_center_score_dh">积分兑换</string>
    <string name="user_center_score_jl">兑换记录</string>
    <string name="user_center_company">企业账号</string>
    <string name="user_center_print">打印记录</string>
    <string name="score_rules">适用说明</string>
    <string name="user_center_print_dy">打印</string>
    <string name="user_center_print_fy">复印</string>
    <string name="user_center_print_sm">扫描</string>
    <string name="corporation_1_1">本月剩余免费分钟数 (大会议室)</string>
    <string name="corporation_1_2">预定会议室使用</string>
    <string name="corporation_2_1">本月剩余免费分钟数 (小会议室)</string>
    <string name="corporation_2_2">打印 / 复印 / 扫描使用</string>
    <string name="corporation_3_1">本月剩余打印赠送金额</string>
    <string name="corporation_3_2">企业记账使用</string>
    <string name="corporation_cny"> 元</string>
    <string name="corporation_min"> 分钟</string>
    <string name="user_score_dh">立即兑换</string>
    <string name="user_score_jfmx">积分明细</string>
    <string name="user_score_jfbz">积分不足</string>
    <string name="user_score_trans">兑换</string>
    <string name="user_score_done">已兑换</string>
    <string name="now_recharge">立即充值</string>
    <string name="please_setting_pay_password">请设置 6 位支付密码</string>
    <string name="order_num_product">共%1$d件商品 实付款： </string>
    <string name="not_user_coupon">不使用优惠券</string>
    <string name="finger_pay">指纹支付</string>
    <string name="set_pay_pws">设置支付密码</string>
    <string name="free_price_num">免密金额 (小于等于以下金额)</string>
    <string name="free_pws_pay">小额免密支付</string>
    <string name="device">设备：</string>
    <string name="person_num">人数：</string>
    <string name="price">价格：</string>
    <string name="time_interval">时段：</string>
    <string name="hold_person_num">容纳人数</string>
    <string name="start_time">开始时间</string>
    <string name="user_show">使用说明：</string>
    <string name="cancel">取消</string>
    <string name="used_password">使用密码</string>
    <string name="please_check_finger">请验证指纹</string>
    <string name="try_again">再试一次</string>
    <string name="device_lock_again">指纹设备被锁定，请稍后再试</string>
    <string name="open_success">开启成功</string>
    <string name="validity_time">有效期：</string>
    <string name="recharge_complete">充值完成</string>
    <string name="look_my_code">查看二维码</string>
    <string name="change_center">切换中心</string>
    <string name="your_current_location">您当前所在位置</string>
    <string name="select_center">选择所在中心</string>
    <string name="guide_step_one">下一步(1/2)</string>
    <string name="guide_step_two">知道了(2/2)</string>
    <string name="show_all_text">展开全文</string>
    <string name="hide_some_text">收起</string>
    <string name="you_can_open_room">你可以解锁的房间</string>
    <string name="blue_searching">正在搜索</string>
    <string name="blue_down_refresh">下拉刷新</string>
    <string name="input_contact_info">填写联系人信息</string>
    <string name="contact">联系人</string>
    <string name="mobile_code">手机号</string>
    <string name="wx_code">微信号</string>
    <string name="remark">备注</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_wx">请输入微信号</string>
    <string name="please_input_remark">请输入您的备注</string>
    <string name="done">确定</string>
    <string name="code_number">验证码</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="back">返回</string>
    <string name="code_text">收不到验证码？试试 </string>
    <string name="code_text_">语音验证码</string>
    <string name="c_qy">企业权益</string>
    <string name="c_yg">企业员工</string>
    <string name="c_zl">资料编辑</string>
    <string name="text_9">相机胶卷</string>
    <string name="text_22">支付安全</string>
    <string name="tv_china">中国</string>
    <string name="delete">删除</string>
    <string name="txt_delete">确定删除动态？</string>
    <string name="enter_new_phone">确认删除好友?</string>
</resources>