<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    tools:context="com.atlas.crmapp.usercenter.EditMobileActivity">

    <include
        android:id="@+id/include_title"
        layout="@layout/titlebar" />

    <TextView
        android:layout_marginBottom="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_phone"
        android:textColor="#FF939393"
        android:textSize="14sp"
        />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11">


        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:minWidth="90dp"
            android:layout_weight="1"
            android:id="@+id/ll_area"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_area"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/icon_arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_china"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tv_number"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textColor="#FF939393"
                android:textSize="15sp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/input_phone_number"
            android:inputType="number"
            android:maxLength="11" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        style="@style/DividerHorizontal"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="10dp"
        android:paddingTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/code_number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/please_input_authc_code"
            android:inputType="number"
            android:maxLength="4" />

        <Button
            android:id="@+id/btnCode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@null"
            android:text="@string/click_get"
            app:layout_constraintLeft_toRightOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        style="@style/DividerHorizontal"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp" />


    <Button
        android:id="@+id/btnSubmit"
        style="@style/SubmitButton"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/done"
        android:visibility="gone" />


    <Button
        android:id="@+id/btnSubmitLast"
        style="@style/SubmitButtonGray"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:text="@string/done" />

    <LinearLayout
        android:id="@+id/ll_voice"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_text"
            android:textColor="#FF939393"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/tv_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_text_"
            android:textColor="#FF00001B"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>
